<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:orientation="vertical"
    android:background="@color/gray_dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:src="@drawable/baseline_monitor_heart_24">
    </ImageView>

    <TextView
        android:id="@+id/txtInvitation"
        style="@style/viewCustom"
        android:text="@string/invitation"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/Email"
        style="@style/viewCustom"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        />

    <EditText
        android:id="@+id/Password"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/btnlogin"
        style="@style/viewCustom"
        android:text="@string/login"
        android:gravity="center"
        android:background="@color/green"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:onClick="login"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:text="@string/forgotPassword"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:onClick="forgotPassword"
        />

    <LinearLayout
        android:id="@+id/lyTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/termsAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/orange"
            android:onClick="goTerms"
            android:textSize="18sp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btngoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/google"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:textAlignment="viewStart"
        android:onClick="callSignInGoogle"
        />





</LinearLayout>